tests/semantic/case_err4.expected

Semantic Error [line 12]: value: "1"
	Duplicate case detected. All cases must be unique.
